--- a/CSS/detalle.css
+++ b/CSS/detalle.css
@@ -47,7 +47,12 @@ i:hover {
 .star-rating .fa-star.checked {
   color: #ff9900;
 }
-@media (max-width: 320px) {
+@media screen and (max-width: 425px) {
+  #detallesProducto {
+    margin: 15px;
+  }
+}
+@media screen and (max-width: 320px) {
   #detallesProducto {
     margin: 10px;
   }
